[package]
name = "pgfx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gl = "0.14.0"
rusttype = "0.9.2"
stb_image = "0.2.4"
rodio = { version = "0.17.2", default-features = false, features = ["wav", "vorbis"] }

[dependencies.sdl2]
version = "0.36.0"

[dev-dependencies]
rand = "0.8.5"
